@@ -1,5 +1,14 @@
 $Id$
 
+2021-01-17  Christian Franke  <franke@computer.org>
+
+	scsinvme.cpp: Add '-d sntasmedia' device type for ASMedia ASM2362
+	USB to NVMe bridges (#1221).
+	dev_interface.cpp: Update help text.
+	smartctl.8.in, smartd.conf.5.in: Document new option.
+
+	Thanks to Demian from Sabrent.
+
 2021-01-15  Christian Franke  <franke@computer.org>
 
 	smartctl.8.in: Add EXPERIMENTAL note for new '-l scterc' variants.
